# uv-start

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: index.rst  usage.rst
src/uv_init/: cli.py  config.py  dev_deps.py  parse_docs.py  router.py  setup_git_repo.py
src/uv_start/: __init__.py
test-gh/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
test-gh/.github/workflows/: ci.yml  release.yml
test-gh/src/test_gh/: __init__.py  config.py
tests/: test_parse_docs.py
