[project]
name = "uv-start"
version = "0.5.1"
description = "CLI tool to scaffold Python projects with uv, pre-configured dev tools, and optional GitHub integration"
readme = "README.md"
license = "MIT"
authors = [
    { name = "hh65", email = "hh65@sussex.ac.uk" }
]
keywords = ["uv", "project-template", "scaffolding", "cli", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.13"
dependencies = [
    "rich>=13.9.4",
]

[project.urls]
Homepage = "https://github.com/hocheggerlab/uv-start"
Documentation = "https://hocheggerlab.github.io/uv-start/"
Repository = "https://github.com/hocheggerlab/uv-start"
Issues = "https://github.com/hocheggerlab/uv-start/issues"

[project.scripts]
uv-start = "uv_start.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["src/uv_start/template/.env.example"]

[tool.hatch.build.targets.wheel]
packages = ["src/uv_start"]

[tool.hatch.build.targets.sdist]
exclude = [".claude"]

[dependency-groups]
dev = [
    "commitizen>=4.0.0",
    "myst-parser>=5.0.0",
    "pandas-stubs>=2.2.3.250308",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.6.3",
    "sphinx-rtd-theme>=3.1.0",
    "ty>=0.0.18",
    "typing-extensions>=4.13.2",
    "uv-start",
]

[tool.ruff]
line-length = 79
lint.select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501", # line too long, handled by ruff formatter
    "ISC001", # string concatenation conflicts with formatter
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*vendored*",
    "*_vendor*",
    ]


fix = true
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.1"
tag_format = "v$version"
version_files = [
    "src/uv_start/__init__.py:__version__",
    "pyproject.toml:version",
    "README.md:version-[0-9]+\\.[0-9]+\\.[0-9]+"
]
version_provider = "commitizen"
major_version_zero = true
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
annotated_tag = true
[tool.uv.sources]
uv-start = { workspace = true }

[tool.uv.workspace]
members = [
    "test-gh",
]


[tool.ty.src]
exclude = ["src/uv_start/template/"]
